<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_nama_desa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/desa_lorem"/>
        
        <View
            android:id="@+id/view_line_1"
            android:layout_width="38dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_desa"/>

        <LinearLayout
            android:id="@+id/section_info_desa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line_1">

            <TextView
                android:id="@+id/tv_alamat_desa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/example_address"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/jumlah_kepala_keluarga"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_jumlah_kepala_keluarga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/_198"
                    android:textColor="@color/main_color"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_line_2"
            android:layout_width="1dp"
            android:layout_height="94dp"
            android:background="@color/black"
            android:layout_marginEnd="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        
        <ImageView
            android:id="@+id/btn_choose"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toEndOf="@id/view_line_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_choose"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>