<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ui.maps.MapsActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/shape"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/view_line_1"
            android:layout_width="57dp"
            android:layout_height="1dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:layout_gravity="center|top"/>
        
        <com.example.geostatapplication.custom.CustomButton
            android:id="@+id/btn_navigasi"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/navigasi"/>

        <TextView
            android:id="@+id/tv_nama_desa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="73dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/nama_desa"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="44dp"
            android:elevation="5dp"
            android:layout_gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:id="@+id/section_lokasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_location"
                            android:layout_gravity="center_vertical"
                            android:importantForAccessibility="no" />

                        <TextView
                            android:id="@+id/tv_lokasi_desa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/black"
                            android:text="@string/lorem_ipsum"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/section_provinsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_provinsi"
                            android:layout_gravity="center_vertical"
                            android:importantForAccessibility="no" />

                        <TextView
                            android:id="@+id/tv_provinsi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            tools:ignore="SmallSp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/black"
                            android:text="@string/lorem_ipsum"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/section_kabupaten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_kabupaten"
                            android:layout_gravity="center_vertical"
                            android:importantForAccessibility="no" />

                        <TextView
                            android:id="@+id/tv_kabupaten"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/black"
                            android:text="@string/lorem_ipsum"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/section_kepala_keluarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_family"
                            android:layout_gravity="center_vertical"
                            android:importantForAccessibility="no" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/black"
                                android:text="@string/jumlah_kepala_keluarga_q"/>

                            <TextView
                                android:id="@+id/tv_jumlah_kepala_keluarga"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:layout_marginStart="3dp"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/main_color"
                                android:text="@string/jumlah_kepala_keluarga_q"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:cardCornerRadius="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="5dp"
        android:layout_gravity="top|start">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_left"/>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>